--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-  "name": "backend_full_node_express_project",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "dev": "nodemon --exec ts-node src/index.ts"
-  },
-  "dependencies": {
-    "@types/express": "^4.17.15",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "mysql2": "^2.3.3",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "tsoa": "^5.0.0",
-    "typeorm": "^0.3.11",
-    "typescript": "^4.9.4"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/node": "^18.11.18",
-    "cors": "^2.8.5"
-  }
+   "name": "backend_full_node_express_project",
+   "version": "1.0.0",
+   "main": "index.js",
+   "license": "MIT",
+   "scripts": {
+      "dev": "nodemon --exec ts-node src/index.ts",
+      "swagger": "tsoa spec-and-routes && tsc",
+      "dev:start": "nodemon --exec ts-node swagger/src/index.ts",
+      "start": "ts-node src/index.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "dependencies": {
+      "@types/express": "^4.17.15",
+      "dotenv": "^16.0.3",
+      "express": "^4.18.2",
+      "mysql2": "^2.3.3",
+      "nodemon": "^2.0.20",
+      "reflect-metadata": "^0.1.13",
+      "ts-node": "^10.9.1",
+      "tsoa": "^5.0.0",
+      "typeorm": "0.3.11",
+      "typescript": "^4.9.4",
+      "winston": "^3.8.2",
+      "mysql": "^2.14.1"
+   },
+   "devDependencies": {
+      "@types/cors": "^2.8.13",
+      "@types/node": "^16.11.10",
+      "cors": "^2.8.5",
+      "ts-node": "10.7.0",
+      "typescript": "4.5.2"
+   }
 }
